--- a/widget/templates/layouts/item-2.html
+++ b/widget/templates/layouts/item-2.html
@@ -1,5 +1,5 @@
 <div class="holder padding-zero text-overlay">
-    <div class="media-center-plugin layout2" id="backgroundImage">
+    <div class="media-center-plugin second-layout" id="backgroundImage">
         <div class="people-banner">
             <div class="people-bg clearfix">
                 <div class="people-holder clearfix">
