--- a/widget/templates/layouts/list-1.html
+++ b/widget/templates/layouts/list-1.html
@@ -16,7 +16,7 @@
 </script>
 
 <div class="holder padding-zero list-layout-1" ng-class="{'pb40': globalPlaylist}">
-    <div class="media-center-plugin layout1 text-overlay">
+    <div class="media-center-plugin first-layout text-overlay">
         <div class="plugin-banner clearfix">
             <div  id="carousel" build-fire-carousel=""></div>
         </div>
