--- a/widget/templates/layouts/list-2.html
+++ b/widget/templates/layouts/list-2.html
@@ -13,7 +13,7 @@
 </script>
 
 <div class="holder padding-zero list-layout-2" ng-class="{'pb70': globalPlaylist}">
-    <div class="media-center-plugin layout3 text-overlay">
+    <div class="media-center-plugin third-layout text-overlay">
         <div class="media-center-banner clearfix">
             <div id="carousel" build-fire-carousel=""></div>
         </div>
