--- a/widget/templates/layouts/list-3.html
+++ b/widget/templates/layouts/list-3.html
@@ -13,7 +13,7 @@
 </script>
 
 <div class="holder padding-zero list-layout-3" ng-class="{'pb75': globalPlaylist}">
-    <div class="media-center-plugin layout3 list-3 text-overlay">
+    <div class="media-center-plugin third-layout list-3 text-overlay">
         <div class="plugin-banner clearfix text-overlay">
             <div id="carousel" build-fire-carousel=""></div>
         </div>
@@ -55,7 +55,7 @@
                     </div>
                 </div>
                 <div class="padded text-left text-overlay">
-                    <div class="titleFlexBox">
+                    <div class="title-flex-box">
                         <p class="text-primary ellipsis margin-zero title">
                             <a class="text-primary">{{item.data.title}}</a>
                         </p>
