--- a/widget/templates/layouts/list-4.html
+++ b/widget/templates/layouts/list-4.html
@@ -21,7 +21,7 @@
 </script>
 
 <div class="holder padding-zero list-layout-4" ng-class="{'pb30': globalPlaylist}">
-    <div class="media-center-plugin list-layout layout4 text-overlay">
+    <div class="media-center-plugin list-layout fourth-layout text-overlay">
         <div class="media-center-banner clearfix text-overlay">
             <div id="carousel" build-fire-carousel=""></div>
         </div>
