--- a/widget/templates/layouts/now-playing.html
+++ b/widget/templates/layouts/now-playing.html
@@ -106,7 +106,7 @@
     <div ng-if="playlist" class="overlay backgroundColorTheme slide"
         style="position:fixed; top:0; left:0; width:100%; height:100%;">
         <div class="overlay-content" style="position:absolute; top:0; left:0; height:100%; width: 100%; overflow:auto;">
-            <div class="media-player-list-layout layout3">
+            <div class="media-player-list-layout third-layout">
                 <div class="list-layout has-btns">
                     <div class="list-item overflow-hidden"
                         ng-swipe-right="NowPlaying.addEvents($event, $index, false,track)"
