--- a/widget/templates/layouts/item-1.html
+++ b/widget/templates/layouts/item-1.html
@@ -1,5 +1,5 @@
 <div class="holder padding-zero text-overlay">
-    <div class="media-center-plugin layout1" id="backgroundImage">
+    <div class="media-center-plugin first-layout" id="backgroundImage">
         <div class="media-center-banner clearfix">
             <div ng-class="WidgetMedia.showVideo == false ? '' : 'video-container-background'"
                 style="max-height: {{(WidgetMedia.deviceWidth*9)/16+'px'}} !important;"
