--- a/widget/templates/modals/playlist.html
+++ b/widget/templates/modals/playlist.html
@@ -4,7 +4,7 @@
 <div class="modal-body" style="margin-top: 488px;">
     <div class="overlay" style="position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.8);">
         <div class="overlay-content" style="postiion:absolute; top:0; left:0; height:100%; width: 100%; overflow:auto;">
-            <div class="media-player-list-layout layout3">
+            <div class="media-player-list-layout third-layout">
                 <div class="list-layout has-btns">
                     <div class="list-item ">
                         <div class="list-item-media now-playing text-left">
