--- a/widget/templates/modals/remove-track-modal.html
+++ b/widget/templates/modals/remove-track-modal.html
@@ -1,16 +1,16 @@
 <div class="modal-contain">
     <div class="padded clearfix">
         <div class="content text-center">
-            <p class="text-center blackTheme" style="font-weight:500;">{{RemoveTrackPopup.modalString.modalTitle}}</p>
-            <p class="blackTheme margin-zero">{{RemoveTrackPopup.modalString.modalText}}</p>
+            <p class="text-center blackTheme" style="font-weight:500;">{{RemoveTrackPopup.modalString.rtModalTitle}}</p>
+            <p class="blackTheme margin-zero">{{RemoveTrackPopup.modalString.rtModalText}}</p>
         </div>
     </div>
     <div class="bottom border-top-grey clearfix">
         <div class="col-xs-6 pull-left text-center padding-zero">
-            <a class="blackTheme default-background-hover transition-third" ng-click="RemoveTrackPopup.cancel()" style="display:block; padding:8px;">{{RemoveTrackPopup.modalString.cancelButton}}</a>
+            <a class="blackTheme default-background-hover transition-third" ng-click="RemoveTrackPopup.cancel()" style="display:block; padding:8px;">{{RemoveTrackPopup.modalString.rtModalCancel}}</a>
         </div>
         <div class="col-xs-6 pull-right text-center padding-zero border-left-grey">
-            <a class="text-danger default-background-hover transition-third" ng-click="RemoveTrackPopup.ok()" style="display:block; padding:8px; text-decoration:none;">{{RemoveTrackPopup.modalString.removeButton}}</a>
+            <a class="text-danger default-background-hover transition-third" ng-click="RemoveTrackPopup.ok()" style="display:block; padding:8px; text-decoration:none;">{{RemoveTrackPopup.modalString.rtModalRemove}}</a>
         </div>
     </div>
 </div>
