--- a/widget/templates/layouts/now-playing.html
+++ b/widget/templates/layouts/now-playing.html
@@ -127,7 +127,7 @@
                             </div>
                             <div class="remove-btn text-center dangerBackgroundTheme" style="background:red;"
                                 ng-click="NowPlaying.removeTrackFromPlayList($index)">
-                                <span class="whiteTheme">{{NowPlaying.playListStrings.removeFromPlaylist}}</span>
+                                <span class="whiteTheme">{{NowPlaying.playListStrings.removePlayListButton}}</span>
                             </div>
                         </div>
                     </div>
