--- a/widget/templates/layouts/list-3.html
+++ b/widget/templates/layouts/list-3.html
@@ -46,7 +46,7 @@
                 ng-click="WidgetHome.goToMedia($index)">
                 <div class="plugin-banner clearfix text-overlay">
                     <div class="text-overlay"
-                        play-btn="{{item.data.videoUrl.length > 0 || (skipMediaPage && (item.data.videoUrl.length > 0 || item.data.audioUrl.length > 0)) }}">
+                        play-btn="{{item.data.videoUrl.length > 0 || item.data.audioUrl.length > 0 }}">
                         <img ng-if="item.data.topImage" load-image="16x9" style="width:100%;" crop-width="340"
                             crop-height="190" crop-type="crop"
                             data-final-src="{{item.data.topImage | resizeImage : 340:190}}">
@@ -61,9 +61,11 @@
                         </p>
                         <div class="action" style="display: flex; flex-direction: row;">
                             <div class="li-actions-item">
-                                <i data-ng-if="item.hasDownloadedMedia && WidgetHome.media.data.content.allowOfflineDownload "
-                                    style="margin-left: auto; margin-top: 2px;" class="glyphicon glyphicon-ok-circle"
-                                    role="button"></i>
+                                <svg data-ng-if="item.hasDownloadedMedia && WidgetHome.media.data.content.allowOfflineDownload "  
+                                    xmlns="http://www.w3.org/2000/svg" width="15" height="16" viewBox="0 0 15 16" fill="none">
+                                    <path d="M7.49996 0.916992C3.59704 0.916992 0.416626 4.09741 0.416626 8.00033C0.416626 11.9032 3.59704 15.0837 7.49996 15.0837C11.4029 15.0837 14.5833 11.9032 14.5833 8.00033C14.5833 4.09741 11.4029 0.916992 7.49996 0.916992ZM6.79163 6.58366V3.75033H8.20829V6.58366H10.3333L7.49996 9.41699L4.66663 6.58366H6.79163ZM11.0416 11.542H3.95829V10.1253H11.0416V11.542Z" 
+                                        fill="var(--bf-theme-success)"/>
+                                </svg>
                                 <div data-ng-if="currentlyDownloading.indexOf(item.id) > -1" class="lds-ring-small">
                                     <div></div>
                                     <div></div>
