--- a/widget/templates/layouts/list-4.html
+++ b/widget/templates/layouts/list-4.html
@@ -60,7 +60,7 @@
                                     role="button"></i>
                             </div>
                             <div class="list-media-holder text-overlay"
-                                play-btn="{{WidgetHome.items[$index].data.videoUrl.length > 0  || (skipMediaPage && (WidgetHome.items[$index].data.videoUrl.length > 0 || WidgetHome.items[$index].data.audioUrl.length > 0)) }}">
+                                play-btn="{{WidgetHome.items[$index].data.videoUrl.length > 0 || WidgetHome.items[$index].data.audioUrl.length > 0 }}">
                                 <img ng-if="WidgetHome.items[$index].data.topImage" load-image="1x1" crop-width="200"
                                     crop-height="200" crop-type="crop"
                                     data-final-src="{{WidgetHome.items[$index].data.topImage | resizeImage : 200:200}}">
@@ -74,9 +74,11 @@
                                     <a
                                         class="ellipsis margin-zero text-primary ">{{WidgetHome.items[$index].data.title}}</a>
                                 </p>
-                                <i data-ng-if="WidgetHome.items[$index].hasDownloadedMedia && WidgetHome.media.data.content.allowOfflineDownload"
-                                    style="margin-left: auto; margin-top: 2px;" class="glyphicon glyphicon-ok-circle"
-                                    role="button"></i>
+                                <svg data-ng-if="WidgetHome.items[$index].hasDownloadedMedia && WidgetHome.media.data.content.allowOfflineDownload" 
+                                    xmlns="http://www.w3.org/2000/svg" width="15" height="16" viewBox="0 0 15 16" fill="none">
+                                    <path d="M7.49996 0.916992C3.59704 0.916992 0.416626 4.09741 0.416626 8.00033C0.416626 11.9032 3.59704 15.0837 7.49996 15.0837C11.4029 15.0837 14.5833 11.9032 14.5833 8.00033C14.5833 4.09741 11.4029 0.916992 7.49996 0.916992ZM6.79163 6.58366V3.75033H8.20829V6.58366H10.3333L7.49996 9.41699L4.66663 6.58366H6.79163ZM11.0416 11.542H3.95829V10.1253H11.0416V11.542Z" 
+                                        fill="var(--bf-theme-success)"/>
+                                </svg>
                                 <!-- <div data-ng-if="currentlyDownloading.indexOf(WidgetHome.items[$index + 1].id) > -1" role="button" class="loader"> -->
                                 <div data-ng-if="currentlyDownloading.indexOf(WidgetHome.items[$index].id) > -1"
                                     class="lds-ring-small">
@@ -110,7 +112,7 @@
 
                             </div>
                             <div class="list-media-holder text-overlay"
-                                play-btn="{{WidgetHome.items[$index+1].data.videoUrl.length > 0  || (skipMediaPage && (WidgetHome.items[$index+1].data.videoUrl.length > 0 || WidgetHome.items[$index+1].data.audioUrl.length > 0)) }}">
+                                play-btn="{{WidgetHome.items[$index+1].data.videoUrl.length > 0 || WidgetHome.items[$index+1].data.audioUrl.length > 0 }}">
                                 <img ng-if="WidgetHome.items[$index + 1].data.topImage" load-image="1x1"
                                     crop-width="200" crop-height="200" crop-type="crop"
                                     data-final-src="{{WidgetHome.items[$index + 1].data.topImage | resizeImage : 200:200}}">
@@ -124,9 +126,11 @@
                                     <a class="ellipsis margin-zero text-primary ">{{WidgetHome.items[$index +
                                         1].data.title}}</a>
                                 </p>
-                                <i data-ng-if="WidgetHome.items[$index + 1].hasDownloadedMedia && WidgetHome.media.data.content.allowOfflineDownload"
-                                    style="margin-left: auto; margin-top: 2px;" class="glyphicon glyphicon-ok-circle"
-                                    role="button"></i>
+                                <svg data-ng-if="WidgetHome.items[$index + 1].hasDownloadedMedia && WidgetHome.media.data.content.allowOfflineDownload" 
+                                    xmlns="http://www.w3.org/2000/svg" width="15" height="16" viewBox="0 0 15 16" fill="none">
+                                    <path d="M7.49996 0.916992C3.59704 0.916992 0.416626 4.09741 0.416626 8.00033C0.416626 11.9032 3.59704 15.0837 7.49996 15.0837C11.4029 15.0837 14.5833 11.9032 14.5833 8.00033C14.5833 4.09741 11.4029 0.916992 7.49996 0.916992ZM6.79163 6.58366V3.75033H8.20829V6.58366H10.3333L7.49996 9.41699L4.66663 6.58366H6.79163ZM11.0416 11.542H3.95829V10.1253H11.0416V11.542Z" 
+                                        fill="var(--bf-theme-success)"/>
+                                </svg>
                                 <!-- <div data-ng-if="currentlyDownloading.indexOf(WidgetHome.items[$index + 1].id) > -1" role="button" class="loader"> -->
                                 <div data-ng-if="currentlyDownloading.indexOf(WidgetHome.items[$index + 1].id) > -1"
                                     class="lds-ring-small">
