--- a/widget/assets/css/media.css
+++ b/widget/assets/css/media.css
@@ -1,3 +1,7 @@
+:root {
+    --played-tracker-percentage: 0%
+}
+
 /* Global Styles ////////////////////////////////////////////////////////////////////////////// */
 html{
 	font-size: 16px !important;
@@ -132,11 +136,12 @@ h5{
 .holder.now-playing .media-holder, .more-info .media-holder {
     display: table;
     text-align: center;
-    width: 220px;
-    height: 220px;
-    max-width: 220px;
-    max-height: 220px;
+    width: 280px;
+    height: 280px;
+    max-width: 280px;
+    max-height: 280px;
     margin: 0 auto;
+    padding-top: 24px;
 }
 
 .third-layout .title-flex-box {
@@ -199,9 +204,11 @@ h5{
 }
 
 .holder.now-playing .media-holder .media-inner, .more-info .media-holder .media-inner {
-    max-width: 220px;
-    max-height: 220px;
-    display: table-cell;
+    max-width: 280px;
+    min-width: 280px;
+    max-height: 280px;
+    min-height: 280px;
+    display: table;
     vertical-align: middle;
 }
 
@@ -209,8 +216,8 @@ h5{
     max-width: 100%;
     max-height: 100%;
     border-radius: 8px;
-    width: 240px;
-    height: 240px;
+    width: 280px;
+    height: 280px;
     object-fit: cover;
     box-shadow: 0 0 16px rgba(0,0,0,.5);
 }
@@ -314,21 +321,23 @@ h5{
 }
 
 .audio-plyer input[type=range]::-webkit-slider-runnable-track {
-	width: 100%;
-	height: 3px;
-	cursor: pointer;
-	animate: 0.2s;
-	background: #ffffff;
+    width: 100%;
+    height: 6px;
+    cursor: pointer;
+    border-radius: 12px;
+    animate: 0.2s;
+    background: -webkit-gradient(linear, left top, right top, from(var(--bf-theme-primary)), color-stop(var(--bf-theme-primary)), color-stop(#fff), to(white));
+    background: -o-linear-gradient(left, var(--bf-theme-primary) 0%, var(--bf-theme-primary) var(--played-tracker-percentage), #fff var(--played-tracker-percentage), white 100%);
+    background: linear-gradient(to right, var(--bf-theme-primary) 0%, var(--bf-theme-primary) var(--played-tracker-percentage), #fff var(--played-tracker-percentage), white 100%);
 }
 
 .audio-plyer input[type=range]::-webkit-slider-thumb {
-	height: 9px;
-	width: 9px;
-	background: #ffffff;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
 	cursor: pointer;
-	-webkit-appearance: none;
-	margin-top: -2.7px;
-	border-radius: 4.5px;
+    -webkit-appearance: none;
+    background: var(--bf-theme-primary);
 }
 
 .audio-plyer input[type=range]:focus::-webkit-slider-runnable-track {
@@ -340,13 +349,15 @@ h5{
 	height: 10px;
 	cursor: pointer;
 	animate: 0.2s;
-	background: #ffffff;
+	background: -webkit-gradient(linear, left top, right top, from(var(--bf-theme-primary)), color-stop(var(--bf-theme-primary)), color-stop(#fff), to(white));
+    background: -o-linear-gradient(left, var(--bf-theme-primary) 0%, var(--bf-theme-primary) var(--played-tracker-percentage), #fff var(--played-tracker-percentage), white 100%);
+    background: linear-gradient(to right, var(--bf-theme-primary) 0%, var(--bf-theme-primary) var(--played-tracker-percentage), #fff var(--played-tracker-percentage), white 100%);
 }
 
 .audio-plyer input[type=range]::-moz-range-thumb {
 	height: 20px;
 	width: 20px;
-	background: #ffffff;
+	background: var(--bf-theme-primary);
 	cursor: pointer;
 	-webkit-appearance: none;
 	margin-top: -5px;
