--- a/widget/assets/css/widget.app.css
+++ b/widget/assets/css/widget.app.css
@@ -1626,3 +1626,7 @@ input[type="checkbox"]:checked+.subcategory-label.minus::before {
 .date-container {
 	display: inline;
 }
+
+.playList-icon{
+	filter: unset !important;
+}
