Feat: refactor the code

--- a/widget/assets/css/media.css
+++ b/widget/assets/css/media.css
@@ -1,5 +1,7 @@
 :root {
-    --played-tracker-percentage: 0%
+    --played-tracker-percentage: 0%;
+    --played-tracker-thump-percentage: 0%;
+    --isPlaying: 0;
 }
 
 /* Global Styles ////////////////////////////////////////////////////////////////////////////// */
@@ -255,6 +257,11 @@ h5{
     height: 48px;
     cursor: pointer;
 }
+.holder.now-playing .media-player-btns span {
+    width: 64px;
+    height: 64px;
+}
+
 
 .btn.btn-icon {
     background-color: transparent;
@@ -338,6 +345,9 @@ h5{
 	cursor: pointer;
     -webkit-appearance: none;
     background: var(--bf-theme-primary);
+    position: absolute;
+    left: var(--played-tracker-thump-percentage);
+	transition: left calc(.3s * var(--isPlaying)) ease;
 }
 
 .audio-plyer input[type=range]:focus::-webkit-slider-runnable-track {
@@ -362,6 +372,9 @@ h5{
 	-webkit-appearance: none;
 	margin-top: -5px;
 	border-radius: 10px;
+    position: absolute;
+    left: var(--played-tracker-thump-percentage);
+	transition: left calc(.3s * var(--isPlaying)) ease;
 }
 
 .audio-plyer input[type=range]::-ms-track {
