--- a/widget/templates/layouts/list-4.html
+++ b/widget/templates/layouts/list-4.html
@@ -98,7 +98,7 @@
                                 <span class="list-item-date"
                                     data-ng-if="WidgetHome.items[$index].data.mediaDate">{{WidgetHome.items[$index].data.mediaDate
                                     | jsDate | date:"MMMM dd, yyyy"}}</span>
-                                <img ng-if="item.data.opened && WidgetHome.media.data.content.indicatePlayedItems" class="done-icon" src="assets/css/icons/ic_done_mark.svg" alt="done-mark">
+                                <img ng-if="WidgetHome.items[$index].data.opened && WidgetHome.media.data.content.indicatePlayedItems" class="done-icon" src="assets/css/icons/ic_done_mark.svg" alt="done-mark">
                             </div>
                         </div>
                     </div>
@@ -150,7 +150,7 @@
                                 <span class="list-item-date"
                                     data-ng-if="WidgetHome.items[$index + 1].data.mediaDate">{{WidgetHome.items[$index +
                                     1].data.mediaDate | jsDate | date:"MMMM dd, yyyy"}}</span>
-                                <img ng-if="item.data.opened && WidgetHome.media.data.content.indicatePlayedItems" class="done-icon" src="assets/css/icons/ic_done_mark.svg" alt="done-mark">
+                                <img ng-if="WidgetHome.items[$index + 1].data.opened && WidgetHome.media.data.content.indicatePlayedItems" class="done-icon" src="assets/css/icons/ic_done_mark.svg" alt="done-mark">
                             </div>
                         </div>
                     </div>
