Feat : manage hide/show playback bar

--- a/widget/templates/filters.html
+++ b/widget/templates/filters.html
@@ -1,7 +1,8 @@
 <div id="emptyContainer" class="padded"
+    ng-init="showNavbar()"
     ng-if="!loadingData && (!WidgetFilters.allCategories || (WidgetFilters.allCategories && WidgetFilters.allCategories.length === 0))">
 </div>
-<div id="filterScreen">
+<div id="filterScreen" ng-init="showNavbar()">
     <div id="filtersContainer">
         <div infinite-scroll="WidgetFilters.getMore()" infinite-scroll-distance="1"
             data-infinite-container="#filtersContainer" infinite-scroll-disabled="WidgetFilters.stopScroll">
