--- a/widget/templates/layouts/now-playing.html
+++ b/widget/templates/layouts/now-playing.html
@@ -1,4 +1,4 @@
-<div class="holder now-playing text-center audio-player">
+<div ng-init="hideNavbar()" class="holder now-playing text-center audio-player">
     <div id="playerBackgroundImage"
     ng-style="{'background-image': 'url(' + NowPlaying.currentTrack.backgroundImage + ')'}"
     class="now-playing-backgroundImage"></div>
