--- a/widget/templates/media.html
+++ b/widget/templates/media.html
@@ -1,4 +1,4 @@
-<div>
+<div ng-init="showNavbar()">
     <div ng-if="WidgetMedia.media.data.design.listLayout"
          ng-include="'templates/layouts/' + WidgetMedia.media.data.design.itemLayout+ '.html'">
     </div>
